[package]
name = "rustyink"
version = "0.0.2"
edition = "2021"
description = "Blazing fast static site generator"
authors = ["Arjun Komath <arjunkomath@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arjunkomath/RustyInk"
keywords = ["static", "site", "generator"]

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
clap = { version = "4.3.1", features = ["derive"] }
colored = "2.0.0"
config = "0.13.3"
fs_extra = "1.3.0"
handlebars = "4.3.7"
hotwatch = "0.5.0"
pulldown-cmark = "0.9.3"
regex = "1.8.3"
serde = "1.0.163"
serde_json = "1.0.96"
slugify = "0.1.0"
tokio = { version =  "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
walkdir = "2.3.3"
