[package]
name = "rustyink"
version = "0.0.10"
edition = "2021"
description = "Blazing fast static site generator"
authors = ["Arjun Komath <arjunkomath@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arjunkomath/RustyInk"
keywords = ["static", "site", "generator"]

[dependencies]
anyhow = "1.0.71"
async-recursion = "1.0.4"
axum = "0.6.18"
chrono = "0.4.26"
clap = { version = "4.3.1", features = ["derive"] }
config = "0.13.3"
directories = "5.0.1"
fs_extra = "1.3.0"
futures-util = "0.3.28"
grass = "0.13.1"
handlebars = "4.3.7"
html-minifier = "4.0.0"
md-5 = "0.10.5"
notify = "6.0.1"
notify-debouncer-mini = "0.3.0"
owo-colors = "3.5.0"
pulldown-cmark = "0.9.3"
rayon = "1.7.0"
regex = "1.8.3"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = "1.0.163"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
sitewriter = "1.0.1"
slugify = "0.1.0"
tokio = { version =  "1.28.2", features = ["full"] }
tokio-tungstenite = "0.19.0"
toml = "0.7.5"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
walkdir = "2.3.3"
